# chk-pypackage-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}-cookiecutter/: .pre-commit-config.yaml  Makefile  Pipfile  README.md  setup.cfg  tox.ini
{{cookiecutter.repo_name}}-cookiecutter/docs/: README.md
{{cookiecutter.repo_name}}-cookiecutter/notebooks/: database_connection.ipynb
{{cookiecutter.repo_name}}-cookiecutter/src/{{cookiecutter.package_name}}/: examplefunctions.py
{{cookiecutter.repo_name}}-cookiecutter/tests/: test_examplefunctions.py
