[metadata]
name = {{ cookiecutter.package_name}}
version = file: src/VERSION
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email}}
description = {{ cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://exampleapp.somedomain
classifiers =
	Programming Language :: Python :: 3
{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.8
install_requires =
tests_require =
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.yml, *.yaml

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = src,tests
disallow_untyped_defs = true
ignore_missing_imports = true

[tool:interrogate]
ignore-init-method = True
ignore-init-module = True
ignore-module = True
fail-under = 100
exclude = setup.py
verbose = 2

[tool:pytest]
testpaths = tests
